working weather app

--- a/src/app/modules/content/content.component.html
+++ b/src/app/modules/content/content.component.html
@@ -1,1 +1,20 @@
-<p>content works!</p>
+<!-- <app-search (handleCityChange)="handleCityChange($event)" />
+
+<ng-container *ngIf="city$ | async as city; else chooseCity">
+  <p>
+    Informacje dla {{ city?.LocalizedName }} o kluczu {{city?.Key}}
+  </p>
+
+  <div *ngIf="temperature$ | async as temperature" class="wrapper">
+    Temperatura:
+    <span>
+      {{ temperature }} °C
+    </span>
+  </div>
+</ng-container>
+
+<ng-template #chooseCity>
+  <h2>
+    Wybierz miasto by znaleźć informacje
+  </h2>
+</ng-template> -->
