--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="wrapper">
   <h1 class="title">Weather App</h1>
   <app-search></app-search>
+  <!-- <app-content></app-content> -->
 
 
   <!-- <div class="main-info">
