--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,5 @@
 <div class="wrapper">
   <h1 class="title">Weather App</h1>
   <app-search></app-search>
-  <!-- <app-content></app-content> -->
-
-
-  <!-- <div class="main-info">
-
-    <h3 class="city-name"></h3>
-    <div class="custom-dropdown">
-      <input type="text" id="city-input" placeholder="Wprowadź miasto">
-      <ul class="city-list" id="city-list">
-      </ul>
-    </div>
-
-  </div>
-
-
-  <div>
-    <div class="bottom-section">
-      <div class="headings">
-        <p>Teraz:</p>
-        <p>Za godzinę:</p>
-        <p>Za 12 godzin:</p>
-      </div>
-      <div class="weather-info">
-        <p class="current"></p>
-        <p class="one-hour"></p>
-        <p class="twelve-hours"></p>
-      </div>
-    </div>
-
-    <div class="bottom-section">
-      <div class="headings">
-        <p>Jutro:</p>
-        <p>Za 5 dni:</p>
-        <p>Wczoraj:</p>
-      </div>
-      <div class="weather-info">
-        <p class="tomorrow"></p>
-        <p class="five-days"></p>
-        <p class="yesterday"></p>
-      </div>
-    </div>
-  </div> -->
+  <app-weather></app-weather>
 </div>
